--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 # elke-toestenbord-aanslag-afbinden-op-het-internet
 
-t24/7 hours per day otal internet war
+24/7 hours per day otal internet war
 
 # burgeroorlog
 https://nl.wikipedia.org/wiki/Burgeroorlog
+
+# staat der nederlanden
+https://nl.wikipedia.org/wiki/Staat_der_Nederlanden
