--- a/README
+++ b/README
@@ -7,3 +7,5 @@ https://nl.wikipedia.org/wiki/Burgeroorlog
 
 # staat der nederlanden
 https://nl.wikipedia.org/wiki/Staat_der_Nederlanden
+
+nederland ® 2002-2021
