--- a/README
+++ b/README
@@ -1,6 +1,8 @@
-# elke-toestenbord-aanslag-afbinden-op-het-internet
+-----------------------------------------------------
+| elke-toestenbord-aanslag-afbinden-op-het-internet |
+-----------------------------------------------------
 
-24/7 hours per day otal internet war
+'24/7 hours per day total internet war
 
 # burgeroorlog
 https://nl.wikipedia.org/wiki/Burgeroorlog
