--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 | elke-toestenbord-aanslag-afbinden-op-het-internet |
 -----------------------------------------------------
 
-'24/7 hours per day total internet war
+'24/7 hours per day'
 
 
 # cyberwarfare
